--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Angular 2 app</title>
     <meta charset="UTF-8">
-    <title>My Angular 2 App!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/" />
 
-    <!-- css -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/united/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css">
 
-    <style>body { padding: 15px 15px; }</style>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.js"></script>
 
     <!-- js -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="vendor/semantic.min.js"></script>
+
     <!-- load the dependencies -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
@@ -23,7 +28,14 @@
         System.import('app').catch(function(err) { console.error(err); });
     </script>
 </head>
-<body>
-    <my-app></my-app>
+<body class="pushable">
+    <div class="pusher">
+        <my-app>
+            <div class="ui active inverted dimmer">
+                <div class="ui text large loader">Loading</div>
+            </div>
+        </my-app>
+    </div>
+    <!-- <script src="bundle/bundle.min.js"></script> -->
 </body>
 </html>
